--- a/bio.html
+++ b/bio.html
@@ -1,1 +1,49 @@
-Biography
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	<title> Biography </title>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" href="website.css" />
+</head>
+
+<body>
+
+	<header>
+		Kelsey Gilchrist
+
+	</header>
+
+
+	<class ="subtitle"> Education </class>
+
+	<class ="subtitle"> Relevant Coursework </class>
+
+	<class ="subtitle"> Professional Experience </class>
+
+	<class ="subtitle"> Skills </class>
+
+	<class ="subtitle"> Activities </class>
+
+
+	</div>
+
+
+
+	<div class ="footer">
+
+	<p> <a href="../index.html">Home</a>
+	<a href="../resume.html">Resume</a>
+	<a href="../bio.html">Biography</a> </p>
+
+	</div>
+
+
+</body>
+
+
+
+
+
+</html>
