--- a/bio.html
+++ b/bio.html
@@ -4,7 +4,6 @@
 
 <head>
 	<title> Biography </title>
-	<meta charset="utf-8" />
 	<link rel="stylesheet" href="website.css" />
 </head>
 
@@ -15,16 +14,8 @@
 
 	</header>
 
+	<div id ="content">
 
-	<class ="subtitle"> Education </class>
-
-	<class ="subtitle"> Relevant Coursework </class>
-
-	<class ="subtitle"> Professional Experience </class>
-
-	<class ="subtitle"> Skills </class>
-
-	<class ="subtitle"> Activities </class>
 
 
 	</div>
