--- a/bio.html
+++ b/bio.html
@@ -15,18 +15,18 @@
 	</header>
 
 	<div id ="content">
-I am a senior at Tufts University studying biology and computer science. I am from Scottsdale, Arizona and was born in Hong Kong. 
+ <p> I am a senior at Tufts University studying biology and computer science. I am from Scottsdale, Arizona and was born in Hong Kong. 
 
 I love to travel and learn about different cultures through their food. I feel that food is a fantastic way to discover a new place and there is nothing more exciting than finding a local establishment that encompases the atmosphere of a city. I hope to start a travel and food blog that highlights hidden and well-established restaurants in order to get a better understanding of a place.
-
+</p>
 	</div>
 
 
 
 	<div class ="footer">
 
-	<p> <a href="../index.html">Home</a>
-	<a href="../resume.html">Resume</a>
+	<p> <a href="../index.html">Home</a> &nbsp; &nbsp;
+	<a href="../resume.html">Resume</a> &nbsp; &nbsp;
 	<a href="../bio.html">Biography</a> </p>
 
 	</div>
