--- a/bio.html
+++ b/bio.html
@@ -20,11 +20,17 @@ Kelsey Gilchrist
 
 	</header>
 
-	<div id ="content">
+	<div id ="intro">
  <p> I am a senior at Tufts University studying biology and computer science. I am from Scottsdale, Arizona and was born in Hong Kong. 
-
+</p>
+<p>
 I love to travel and learn about different cultures through their food. I feel that food is a fantastic way to discover a new place and there is nothing more exciting than finding a local establishment that encompases the atmosphere of a city. I hope to start a travel and food blog that highlights hidden and well-established restaurants in order to get a better understanding of a place.
 </p>
+	</div>
+
+	<div id ="run">
+I am a member of the Tufts Marathon Team and will be running the Boston Marathon on April 20, along with 30 other senior from Tufts. We are fundraising for the nutrition, medical, and fitness programs at Tufts University. Any donations are appreciated and can be made <a href="https://www.crowdrise.com/TuftsBoston2015/fundraiser/kelseygilchrist">online/a> or by check or credit card through a mailed in pledge form. If you have any questions please contact Coach Don Megerle at donald.megerle@tufts.edu. 
+
 	</div>
 
 
@@ -33,7 +39,7 @@ I love to travel and learn about different cultures through their food. I feel t
 
 	<p> <a href="../index.html">Home</a> &nbsp; &nbsp;
 	<a href="../resume.html">Resume</a> &nbsp; &nbsp;
-	<a href="../bio.html">Biography</a> </p>
+	<a href="https://www.linkedin.com/pub/kelsey-gilchrist/55/967/91a">LinkedIn</a> </p>
 
 	</div>
 
