--- a/bio.html
+++ b/bio.html
@@ -29,8 +29,9 @@ I love to travel and learn about different cultures through their food. I feel t
 	</div>
 
 	<div id ="run">
-I am a member of the Tufts Marathon Team and will be running the Boston Marathon on April 20, along with 30 other senior from Tufts. We are fundraising for the nutrition, medical, and fitness programs at Tufts University. Any donations are appreciated and can be made <a href="https://www.crowdrise.com/TuftsBoston2015/fundraiser/kelseygilchrist">online/a> or by check or credit card through a mailed in pledge form. If you have any questions please contact Coach Don Megerle at donald.megerle@tufts.edu. 
-
+	<p>
+I am a member of the Tufts Marathon Team and will be running the Boston Marathon on April 20, along with 30 other senior from Tufts. We are fundraising for the nutrition, medical, and fitness programs at Tufts University. Any donations are appreciated and can be made <a href="https://www.crowdrise.com/TuftsBoston2015/fundraiser/kelseygilchrist">online</a> or by check or credit card through a mailed in pledge form. If you have any questions please contact Coach Don Megerle at donald.megerle@tufts.edu. 
+</p>
 	</div>
 
 
