--- a/bio.html
+++ b/bio.html
@@ -44,7 +44,7 @@ I am a member of the Tufts Marathon Team and will be running the Boston Marathon
 	</div>
 
 
-	<p> <img src="IMG_0067.JPG" alt="My picture" class="bottom"/> </p>
+	<p> <img src="IMG_0067.JPG" alt="Beach" class="bottom"/> </p>
 
 
 </body>
